infra/terraform/db-elasticache.tf
# elasticache.tf
resource "aws_security_group" "redis" {
  name   = "bookstore-redis-sg"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = [module.vpc.vpc_cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elasticache_subnet_group" "redis" {
  name       = "bookstore-redis-subnets"
  subnet_ids = module.vpc.private_subnets
}

resource "aws_elasticache_replication_group" "redis" {
  replication_group_id       = "bookstore-redis"
  description                = "Redis for cart/idempotency cache"
  engine                     = "redis"
  engine_version             = "7.1"
  node_type                  = "cache.t3.micro" # demo
  num_cache_clusters         = 2                # multi-AZ
  automatic_failover_enabled = true
  transit_encryption_enabled = true
  at_rest_encryption_enabled = true
  subnet_group_name          = aws_elasticache_subnet_group.redis.name
  security_group_ids         = [aws_security_group.redis.id]
}
